Fix status badge alignment and colors in activator view; #247

--- a/src/styles/_badge.scss
+++ b/src/styles/_badge.scss
@@ -25,4 +25,7 @@
   &.yellow {
     background-color: var(--yellow);
   }
+  &.primary {
+    background-color: var(--primary-color);
+  }
 }
